[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netprobe"
version = "0.2.0"
authors = [
  { name = "Cristopher", email = "your.email@example.com" },
]
description = "A high-performance network probing tool for checking live IPs and domains on ports."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "aiohttp>=3.8.0",
  "tqdm>=4.66.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
netprobe = "netprobe.main:main"
